feat :sparkles: Add new data files and update data processing in main.py

--- a/tiempo_sucursal.ipynb
+++ b/tiempo_sucursal.ipynb
@@ -454,6 +454,63 @@
    "source": [
     "mediana_por_sucursal.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo promedio TP: 11.09 minutos\n",
+      "Tiempo promedio TE: 10.75 minutos\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Datos\n",
+    "data = [\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-01-00071998\", \"6:43:00 AM\", \"6:58:00 AM\", \"12:15:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TE SIN PLAN\", \"003-005-01-00045772\", \"12:00:00 AM\", \"12:00:00 AM\", \"12:00:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TE SIN PLAN\", \"003-003-01-00072118\", \"9:35:00 AM\", \"9:40:00 AM\", \"12:05:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-06-00008091\", \"2:10:00 AM\", \"2:15:00 AM\", \"12:05:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-01-00072172\", \"2:10:00 AM\", \"2:17:00 AM\", \"12:07:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-005-01-00045988\", \"10:49:00 AM\", \"10:56:00 AM\", \"12:07:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-005-01-00046127\", \"5:39:00 AM\", \"5:42:00 AM\", \"12:03:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TE SIN PLAN\", \"003-003-01-00072646\", \"7:36:00 AM\", \"7:54:00 AM\", \"12:18:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-01-00072685\", \"5:51:00 AM\", \"6:17:00 AM\", \"12:26:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-005-01-00046219\", \"11:50:00 AM\", \"12:03:00 PM\", \"12:13:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-01-00072761\", \"5:28:00 AM\", \"5:52:00 AM\", \"12:24:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TE SIN PLAN\", \"003-005-01-00046250\", \"5:43:00 AM\", \"6:03:00 AM\", \"12:20:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-003-01-00072796\", \"7:30:00 AM\", \"7:37:00 AM\", \"12:07:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-005-01-00046478\", \"4:58:00 AM\", \"5:07:00 AM\", \"12:09:00 AM\"],\n",
+    "    [\"KIELSA CLINICA TP SIN PLAN\", \"003-005-01-00046515\", \"9:28:00 AM\", \"9:34:00 AM\", \"12:06:00 AM\"],\n",
+    "]\n",
+    "\n",
+    "# Crear DataFrame\n",
+    "df = pd.DataFrame(data, columns=[\"Type\", \"Code\", \"StartTime\", \"EndTime\", \"OtherTime\"])\n",
+    "\n",
+    "# Convertir horas a formato datetime y calcular duraciones\n",
+    "df[\"StartTime\"] = pd.to_datetime(df[\"StartTime\"], format=\"%I:%M:%S %p\")\n",
+    "df[\"EndTime\"] = pd.to_datetime(df[\"EndTime\"], format=\"%I:%M:%S %p\")\n",
+    "df[\"Duration\"] = (df[\"EndTime\"] - df[\"StartTime\"]).dt.total_seconds() / 60  # Duración en minutos\n",
+    "\n",
+    "# Separar TP y TE\n",
+    "tp = df[df[\"Type\"].str.contains(\"TP\")]\n",
+    "te = df[df[\"Type\"].str.contains(\"TE\")]\n",
+    "\n",
+    "# Calcular tiempo promedio\n",
+    "tp_avg = tp[\"Duration\"].mean()\n",
+    "te_avg = te[\"Duration\"].mean()\n",
+    "\n",
+    "# Resultados\n",
+    "print(f\"Tiempo promedio TP: {tp_avg:.2f} minutos\")\n",
+    "print(f\"Tiempo promedio TE: {te_avg:.2f} minutos\")"
+   ]
   }
  ],
  "metadata": {
