feat: :sparkles: Add data processing code for removing double quotes in CSV file

--- a/personal_marcaje.ipynb
+++ b/personal_marcaje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "path_file = 'E:\\Farinter\\IA\\Documentos\\personal_marcaje.csv'\n",
-    "df = pd.read_csv(path_file, sep=';')"
+    "path_file = '/Users/gabrielchavez/Documents/Farinter/ia/Documentos/DL_Kielsa_empleadosxhora1.csv'\n",
+    "df = pd.read_csv(path_file, sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +40,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Suc_Id</th>\n",
-       "      <th>Sucursal_Nombre</th>\n",
        "      <th>Sucursal_Numero</th>\n",
+       "      <th>Sucursal_Nombre</th>\n",
        "      <th>fecha</th>\n",
-       "      <th>Hora_inicio</th>\n",
-       "      <th>Hora_final</th>\n",
-       "      <th>hora</th>\n",
+       "      <th>dia</th>\n",
+       "      <th>Hora_apertura</th>\n",
+       "      <th>Hora_cierre</th>\n",
+       "      <th>hora_inicio</th>\n",
+       "      <th>hora_final</th>\n",
        "      <th>cantidad_empleados</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -54,79 +57,101 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
        "      <td>1</td>\n",
-       "      <td>1/11/2024</td>\n",
+       "      <td>1</td>\n",
+       "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>viernes</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>7</td>\n",
-       "      <td>22</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1/11/2024</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>viernes</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>8</td>\n",
-       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1/11/2024</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>viernes</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1/11/2024</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>viernes</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>10</td>\n",
-       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>K001 KIELSA YORO MONTECRISTO</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1/11/2024</td>\n",
-       "      <td>7</td>\n",
-       "      <td>22</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>viernes</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>11</td>\n",
-       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Suc_Id               Sucursal_Nombre  Sucursal_Numero      fecha  \\\n",
-       "0       1  K001 KIELSA YORO MONTECRISTO                1  1/11/2024   \n",
-       "1       1  K001 KIELSA YORO MONTECRISTO                1  1/11/2024   \n",
-       "2       1  K001 KIELSA YORO MONTECRISTO                1  1/11/2024   \n",
-       "3       1  K001 KIELSA YORO MONTECRISTO                1  1/11/2024   \n",
-       "4       1  K001 KIELSA YORO MONTECRISTO                1  1/11/2024   \n",
+       "   Unnamed: 0  Suc_Id  Sucursal_Numero               Sucursal_Nombre  \\\n",
+       "0           1       1                1  K001 KIELSA YORO MONTECRISTO   \n",
+       "1           2       1                1  K001 KIELSA YORO MONTECRISTO   \n",
+       "2           3       1                1  K001 KIELSA YORO MONTECRISTO   \n",
+       "3           4       1                1  K001 KIELSA YORO MONTECRISTO   \n",
+       "4           5       1                1  K001 KIELSA YORO MONTECRISTO   \n",
        "\n",
-       "   Hora_inicio  Hora_final  hora  cantidad_empleados  \n",
-       "0            7          22     7                   2  \n",
-       "1            7          22     8                   2  \n",
-       "2            7          22     9                   2  \n",
-       "3            7          22    10                   2  \n",
-       "4            7          22    11                   2  "
+       "        fecha      dia  Hora_apertura  Hora_cierre  hora_inicio  hora_final  \\\n",
+       "0  2024-11-01  viernes            7.0         22.0            7           8   \n",
+       "1  2024-11-01  viernes            7.0         22.0            8           9   \n",
+       "2  2024-11-01  viernes            7.0         22.0            9          10   \n",
+       "3  2024-11-01  viernes            7.0         22.0           10          11   \n",
+       "4  2024-11-01  viernes            7.0         22.0           11          12   \n",
+       "\n",
+       "   cantidad_empleados  \n",
+       "0                   1  \n",
+       "1                   1  \n",
+       "2                   1  \n",
+       "3                   1  \n",
+       "4                   1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,42 +162,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hora\n",
-      "7     5\n",
-      "8     5\n",
-      "9     5\n",
-      "10    5\n",
-      "11    5\n",
-      "12    5\n",
-      "13    5\n",
-      "14    5\n",
-      "15    2\n",
-      "16    2\n",
-      "17    2\n",
-      "18    2\n",
-      "19    2\n",
-      "20    2\n",
-      "21    2\n",
-      "22    0\n",
-      "Name: cantidad_empleados, dtype: int64\n"
+      "     Unnamed: 0  Suc_Id               Sucursal_Nombre  Sucursal_Numero  \\\n",
+      "679         680       1  K001 KIELSA YORO MONTECRISTO                1   \n",
+      "839         840       1  K001 KIELSA YORO MONTECRISTO                1   \n",
+      "\n",
+      "          fecha  Hora_inicio  Hora_final  hora  cantidad_empleados  \n",
+      "679  2024-12-13            7          22    14                   5  \n",
+      "839  2024-12-23            7          22    14                   5  \n"
      ]
     }
    ],
    "source": [
-    "# Filter the dataframe for Sucursal 1\n",
-    "df_sucursal_1 = df[df['Suc_Id'] == 1]\n",
     "\n",
-    "# Group by 'hora' and find the maximum 'cantidad_empleados' for each hour\n",
-    "max_employees_per_hour = df_sucursal_1.groupby('hora')['cantidad_empleados'].max()\n",
-    "\n",
-    "print(max_employees_per_hour)"
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import quote_plus\n",
+    "connection_string = (\n",
+    "    'mssql+pyodbc://'\n",
+    "    'Angel_chavez:{}@172.16.2.227\\\\DWHFARINTERDEV/IA_FARINTER?'\n",
+    "    'driver=ODBC+Driver+17+for+SQL+Server'.format(quote_plus('@ng3l_ch@v3z'))\n",
+    ")"
    ]
   },
   {
@@ -181,22 +204,31 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Suc_Id               Sucursal_Nombre  Sucursal_Numero       fecha  \\\n",
-      "672       1  K001 KIELSA YORO MONTECRISTO                1  13/12/2024   \n",
-      "832       1  K001 KIELSA YORO MONTECRISTO                1  23/12/2024   \n",
-      "\n",
-      "     Hora_inicio  Hora_final  hora  cantidad_empleados  \n",
-      "672            7          22     7                   5  \n",
-      "832            7          22     7                   5  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "457"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df[(df['Suc_Id'] == 1) & (df['hora'] == 7) & (df['cantidad_empleados'] == 5)])\n",
-    " "
+    "# Insertar en la tabla IA_Personal_Sucursal las columnas [Suc_Id]             INT  NULL, [fecha]              DATE NULL, [hora]               INT  NULL, [cantidad_empleados] INT  NULL\n",
+    "# eliminar columnas que no estan en la tabla IA_Personal_Sucursal y renombrar las columnas para que coincidan con la tabla\n",
+    "df['hora']= df['hora_inicio']\n",
+    "df = df[['Suc_Id', 'fecha', 'hora', 'cantidad_empleados']]\n",
+    "df.to_sql('IA_Personal_Sucursal', connection_string, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insertar en esta tabla "
    ]
   }
  ],
@@ -216,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
