Eliminacion de errores para la optimizacion en el caso de que hay regentes

--- a/algoritmo_turnos.ipynb
+++ b/algoritmo_turnos.ipynb
@@ -251,96 +251,6 @@
     "    return model, x, emp, subcov, overcov\n",
     " \n",
     "\n",
-    "def agregar_restricciones(model, x, emp, subcov, overcov, solucion, tipos_turnos,\n",
-    "                          inicios_turno, fechas, sucursal, cost_sub, cost_over):\n",
-    "    \n",
-    "    #if num_regentes == 1:\n",
-    "        #cost_sub = 1.5\n",
-    "        #cost_over = 1\n",
-    "    # if num_regentes == 2:\n",
-    "    #     cost_sub = 1.25\n",
-    "    #     cost_over = 1\n",
-    "    # else:\n",
-    "    #cost_sub = 1.5\n",
-    "    #cost_over = 1\n",
-    "        \n",
-    "    model += (\n",
-    "        pulp.lpSum(\n",
-    "            tipos_turnos[t]['costo'] * x[(fecha, t, h)]\n",
-    "            for fecha in fechas\n",
-    "            for t in inicios_turno[fecha].keys()\n",
-    "            for h in inicios_turno[fecha][t]\n",
-    "            if (fecha, t, h) in x\n",
-    "        ) +\n",
-    "        pulp.lpSum(\n",
-    "            cost_sub * subcov[fecha, h] + cost_over * overcov[fecha, h]\n",
-    "            for fecha in fechas \n",
-    "            for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys()\n",
-    "        )\n",
-    "    ), \"FuncionObjetivo\"\n",
-    "\n",
-    "    # 🔹 Restricción de balance general\n",
-    "    for fecha in fechas:\n",
-    "        for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys():\n",
-    "            if (fecha, h) in emp:  # 🔹 Solo aplicar la restricción si emp[(fecha, h)] existe\n",
-    "                model += (\n",
-    "                    emp[(fecha, h)] + subcov[(fecha, h)] - overcov[(fecha, h)] == solucion[sucursal][fecha][\"Personal_necesario\"][h]\n",
-    "                ), f\"Balance_Hora_{fecha}_{h}\"\n",
-    "\n",
-    "            \n",
-    "# 🔹 Restricción de empleados presentes en cada hora\n",
-    "    for fecha in fechas:\n",
-    "        for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys():\n",
-    "            model += (\n",
-    "                emp[(fecha, h)] == pulp.lpSum(\n",
-    "                    x[fecha, t, i]\n",
-    "                    for t in inicios_turno[fecha].keys()\n",
-    "                    for i in inicios_turno[fecha][t]\n",
-    "                    #for h_prime in solucion[sucursal][fecha][\"Personal_necesario\"].keys()\n",
-    "                    if i <= h <= i + tipos_turnos[t][\"duracion\"] -1\n",
-    "                )\n",
-    "             ), f\"Definicion_Empleados_{fecha}_{h}\"\n",
-    "\n",
-    "    # 🔹 Restricción de al menos 1 empleado por hora solo si la demanda es >= 1\n",
-    "    for fecha in fechas:\n",
-    "        for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys():\n",
-    "            if (fecha, h) in emp and solucion[sucursal][fecha][\"Personal_necesario\"][h] >= 1:\n",
-    "                model += (\n",
-    "                    emp[(fecha, h)] >= 1\n",
-    "                ), f\"Minimo_1_Empleado_en_horas_con_demanda_{fecha}_{h}\"\n",
-    "\n",
-    "\n",
-    "    # 🔹 Restricción de al menos un turno de tipo T8d (diurno) y T7m (mixto) por día\n",
-    "    #añadir verificacion de que la diferencia entre el inicio y el cierre sea mas de 8 horas\n",
-    "    # 🔹 Diccionario para registrar qué fechas ya tienen restricciones asignadas\n",
-    "    #restricciones_aplicadas = set()\n",
-    "\n",
-    "    for fecha in fechas:\n",
-    "        #horas_operacion = max(Bloque_semana[sucursal][fecha].keys()) - min(Bloque_semana[sucursal][fecha].keys())\n",
-    "\n",
-    "        # Si hay 8 horas o más y no se ha agregado una restricción en esta fecha\n",
-    "        if inicios_turno[fecha][\"T8d\"]: #and fecha not in restricciones_aplicadas:\n",
-    "            model += (\n",
-    "                pulp.lpSum(x[fecha, \"T8d\", h] for h in inicios_turno[fecha][\"T8d\"]) >= 1\n",
-    "            ), f\"Minimo_1_Turno_T8d_{fecha}\"\n",
-    "            #restricciones_aplicadas.add(fecha)  # Registrar que ya se agregó una restricción para esta fecha\n",
-    "\n",
-    "        # Si hay entre 7 y 8 horas y no se ha agregado una restricción en esta fecha\n",
-    "        # if inicios_turno[fecha][\"T7m\"] and fecha not in restricciones_aplicadas:\n",
-    "        #     model += (\n",
-    "        #         pulp.lpSum(x[fecha, \"T7m\", h] for h in inicios_turno[fecha][\"T7m\"]) >= 1\n",
-    "        #     ), f\"Minimo_1_Turno_T7m_{fecha}\"\n",
-    "        #     restricciones_aplicadas.add(fecha)  # Registrar que ya se agregó una restricción para esta fecha\n",
-    "\n",
-    "                \n",
-    "        # # 🔹 Restricción de máximo 2 turnos nocturnos (T6n) por día\n",
-    "    # for fecha in fechas:\n",
-    "    #     model += (\n",
-    "    #         pulp.lpSum(x[fecha, \"T6n\", h] \n",
-    "    #                    for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys() \n",
-    "    #                    if (fecha, \"T6n\", h) in x) <= 2\n",
-    "    #     ), f\"Maximo_2_Turnos_T6n_{fecha}\"\n",
-    "\n",
     "\n",
     "def asignacion_regentes(Bloque_semana, solucion, num_regentes):\n",
     "    \"\"\"\n",
@@ -468,6 +378,107 @@
     "                    Bloque_semana[sucursal][fecha][h] -= 1  \n",
     "                solucion[sucursal][fecha][\"Empleados_asignados\"][h] += 1\n",
     "\n",
+    "\n",
+    "def agregar_restricciones(Bloque_semana, model, x, emp, subcov, overcov, solucion, \n",
+    "                          tipos_turnos, inicios_turno, fechas, sucursal, cost_sub, cost_over):\n",
+    "    \n",
+    "    #if num_regentes == 1:\n",
+    "        #cost_sub = 1.5\n",
+    "        #cost_over = 1\n",
+    "    # if num_regentes == 2:\n",
+    "    #     cost_sub = 1.25\n",
+    "    #     cost_over = 1\n",
+    "    # else:\n",
+    "    #cost_sub = 1.5\n",
+    "    #cost_over = 1\n",
+    "    #imprimir_reporte_json(Bloque_semana)\n",
+    "    model += (\n",
+    "        pulp.lpSum(\n",
+    "            tipos_turnos[t]['costo'] * x[(fecha, t, h)]\n",
+    "            for fecha in fechas\n",
+    "            for t in inicios_turno[fecha].keys()\n",
+    "            for h in inicios_turno[fecha][t]\n",
+    "            if (fecha, t, h) in x\n",
+    "        ) +\n",
+    "        pulp.lpSum(\n",
+    "            cost_sub * subcov[fecha, h] + cost_over * overcov[fecha, h]\n",
+    "            for fecha in fechas \n",
+    "            for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys()\n",
+    "        )\n",
+    "    ), \"FuncionObjetivo\"\n",
+    "\n",
+    "    # 🔹 Restricción de balance general\n",
+    "    for fecha in fechas:\n",
+    "        horas = list(solucion[sucursal][fecha]['Personal_necesario'].keys())\n",
+    "        horas.sort()\n",
+    "        for h in horas:\n",
+    "            if (fecha, h) in emp:  # 🔹 Solo aplicar la restricción si emp[(fecha, h)] existe\n",
+    "                model += (\n",
+    "                    emp[(fecha, h)] + subcov[(fecha, h)] - overcov[(fecha, h)] == Bloque_semana[sucursal][fecha][h]\n",
+    "                ), f\"Balance_Hora_{fecha}_{h}\"\n",
+    "\n",
+    "            \n",
+    "# 🔹 Restricción de empleados presentes en cada hora\n",
+    "    for fecha in fechas:\n",
+    "        horas = list(solucion[sucursal][fecha]['Personal_necesario'].keys())\n",
+    "        horas.sort()\n",
+    "        for h in horas:\n",
+    "            model += (\n",
+    "                emp[(fecha, h)] == pulp.lpSum(\n",
+    "                    x[fecha, t, i]\n",
+    "                    for t in inicios_turno[fecha].keys()\n",
+    "                    for i in inicios_turno[fecha][t]\n",
+    "                    #for h_prime in solucion[sucursal][fecha][\"Personal_necesario\"].keys()\n",
+    "                    if i <= h <= i + tipos_turnos[t][\"duracion\"] -1\n",
+    "                )\n",
+    "             ), f\"Definicion_Empleados_{fecha}_{h}\"\n",
+    "\n",
+    "     # 🔹 Restricción de al menos 1 empleado por hora solo si la demanda es >= 1\n",
+    "    for fecha in fechas:\n",
+    "        horas = list(solucion[sucursal][fecha]['Personal_necesario'].keys())\n",
+    "        horas.sort()\n",
+    "        for h in horas:\n",
+    "             if (fecha, h) in emp and Bloque_semana[sucursal][fecha][h] >= 1:\n",
+    "                 model += (\n",
+    "                     emp[(fecha, h)] >= 1\n",
+    "                 ), f\"Minimo_1_Empleado_en_horas_con_demanda_{fecha}_{h}\"\n",
+    "\n",
+    "\n",
+    "    # 🔹 Restricción de al menos un turno de tipo T8d (diurno) y T7m (mixto) por día\n",
+    "    #añadir verificacion de que la diferencia entre el inicio y el cierre sea mas de 8 horas\n",
+    "    # 🔹 Diccionario para registrar qué fechas ya tienen restricciones asignadas\n",
+    "    #restricciones_aplicadas = set()\n",
+    "\n",
+    "    for fecha in fechas:\n",
+    "    #      # Si hay 8 horas o más y no se ha agregado una restricción en esta fecha\n",
+    "    #      # Replace the existing T8d constraint with this:\n",
+    "          if inicios_turno[fecha][\"T8d\"]:\n",
+    "    #          # Check if there are no T8d shifts already assigned in the solution for this date\n",
+    "              if not any(turno for turno in solucion[sucursal][fecha].get(\"T8d\", [])):\n",
+    "                  model += (\n",
+    "                      pulp.lpSum(x[fecha, \"T8d\", h] for h in inicios_turno[fecha][\"T8d\"]) >= 1\n",
+    "                  ), f\"Minimo_1_Turno_T8d_{fecha}\"\n",
+    "\n",
+    "            #restricciones_aplicadas.add(fecha)  # Registrar que ya se agregó una restricción para esta fecha\n",
+    "\n",
+    "        # Si hay entre 7 y 8 horas y no se ha agregado una restricción en esta fecha\n",
+    "        # if inicios_turno[fecha][\"T7m\"] and fecha not in restricciones_aplicadas:\n",
+    "        #     model += (\n",
+    "        #         pulp.lpSum(x[fecha, \"T7m\", h] for h in inicios_turno[fecha][\"T7m\"]) >= 1\n",
+    "        #     ), f\"Minimo_1_Turno_T7m_{fecha}\"\n",
+    "        #     restricciones_aplicadas.add(fecha)  # Registrar que ya se agregó una restricción para esta fecha\n",
+    "\n",
+    "                \n",
+    "        # # 🔹 Restricción de máximo 2 turnos nocturnos (T6n) por día\n",
+    "    # for fecha in fechas:\n",
+    "    #     model += (\n",
+    "    #         pulp.lpSum(x[fecha, \"T6n\", h] \n",
+    "    #                    for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys() \n",
+    "    #                    if (fecha, \"T6n\", h) in x) <= 2\n",
+    "    #     ), f\"Maximo_2_Turnos_T6n_{fecha}\"\n",
+    "\n",
+    "\n",
+    "\n",
     "def solver_semana(Bloque_semana, Horarios, num_regentes, cost_sub, cost_over):\n",
     "    \"\"\"\n",
     "    Resuelve la optimización de turnos semanales incluyendo vendedores,\n",
@@ -521,14 +532,16 @@
     "    inicios_turno = Inicios_turnos(Bloque_semana, tipos_turnos, fechas, sucursal)\n",
     "    #imprimir_reporte_json(inicios_turno)\n",
     "    #Limitar la suma\n",
+    "    #imprimir_reporte_json(Bloque_semana)\n",
     "    if num_regentes > 0:\n",
     "        #imprimir_reporte_json(Bloque_semana)\n",
+    "        #Bloque_semana, solucion = \n",
     "        asignacion_regentes(Bloque_semana, solucion, num_regentes)\n",
     "        #imprimir_reporte_json(Bloque_semana)\n",
-    "    \n",
+    "    #imprimir_reporte_json(Bloque_semana)\n",
     "    model, x, emp, subcov, overcov = crear_modelo(tipos_turnos, Bloque_semana, inicios_turno, fechas, sucursal)\n",
     "    # 🔹 Restricciones\n",
-    "    agregar_restricciones(model, x, emp, subcov, overcov, solucion, \n",
+    "    agregar_restricciones(Bloque_semana, model, x, emp, subcov, overcov, solucion, \n",
     "                          tipos_turnos, inicios_turno, fechas, sucursal,\n",
     "                          cost_sub, cost_over)\n",
     "    \n",
